Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62106

QWebengineProcess.exe crashes after multiple touchscreen taps

XMLWordPrintable

    • Windows
    • d3915634c392f8a350e5ef112f740d4d353daaac (qt/qtwebengine/5.12)

      There is a memory leak, when the page has a lot of iframe nest, the quick point of the page, if the mouse click, run stable and normal. But if you use the touch screen device, quickly click on the page, QwebengineProcess.exe will increase memory, and then Crash

      Proper debug crash backtrace:

      # 27  Id: cf4.1570 Suspend: 1 Teb: 00000041`d7345000 Unfrozen "Chrome_InProcRendererThread"
      Child-SP          RetAddr           Call Site
      00000041`d90f91a0 00000001`853c1e68 Qt5WebEngineCored!blink::HeapAllocator::quantizedSize<blink::Member<blink::LocalFrame> >(unsigned int64 count = 0x9f7ad7)+0x33 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\platform\heap\heapallocator.h @ 56]
      00000041`d90f91d0 00000001`853c2d9d Qt5WebEngineCored!WTF::VectorBufferBase<blink::Member<blink::LocalFrame>,0,blink::HeapAllocator>::allocationSize(unsigned int64 capacity = 0x9f7ad7)+0x18 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\wtf\vector.h @ 361]
      00000041`d90f9200 00000001`853c7602 Qt5WebEngineCored!WTF::VectorBuffer<blink::Member<blink::LocalFrame>,0,blink::HeapAllocator>::expandBuffer(unsigned int64 newCapacity = 0x9f7ad7)+0x1d [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\wtf\vector.h @ 443]
      00000041`d90f9240 00000001`853c2ea1 Qt5WebEngineCored!WTF::Vector<blink::Member<blink::LocalFrame>,0,blink::HeapAllocator>::reserveCapacity(unsigned int64 newCapacity = 0x9f7ad7)+0x62 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\wtf\vector.h @ 1297]
      00000041`d90f9280 00000001`853bea32 Qt5WebEngineCored!WTF::Vector<blink::Member<blink::LocalFrame>,0,blink::HeapAllocator>::expandCapacity(unsigned int64 newMinCapacity = 0x7f9579)+0xc1 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\wtf\vector.h @ 1224]
      00000041`d90f92d0 00000001`853be892 Qt5WebEngineCored!WTF::Vector<blink::Member<blink::LocalFrame>,0,blink::HeapAllocator>::expandCapacity<blink::LocalFrame * __ptr64>(unsigned int64 newMinCapacity = 0x7f9579, class blink::LocalFrame ** ptr = 0x00000041`d90f93f8)+0x22 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\wtf\vector.h @ 1244]
      00000041`d90f9300 00000001`853be7fd Qt5WebEngineCored!WTF::Vector<blink::Member<blink::LocalFrame>,0,blink::HeapAllocator>::appendSlowCase<blink::LocalFrame * __ptr64 & __ptr64>(class blink::LocalFrame ** val = 0x00000041`d90f93f8)+0x82 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\wtf\vector.h @ 1421]
      00000041`d90f9350 00000001`853cab58 Qt5WebEngineCored!WTF::Vector<blink::Member<blink::LocalFrame>,0,blink::HeapAllocator>::append<blink::LocalFrame * __ptr64 & __ptr64>(class blink::LocalFrame ** val = 0x00000041`d90f93f8)+0xdd [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\wtf\vector.h @ 1395]
      00000041`d90f93a0 00000001`853c355e Qt5WebEngineCored!blink::EventHandler::updateGestureTargetNodeForMouseEvent(class blink::EventWithHitTestResults<blink::PlatformGestureEvent> * targetedEvent = 0x00000041`d90f9ca0)+0x248 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\core\input\eventhandler.cpp @ 1589]
      00000041`d90f9540 00000001`847ee823 Qt5WebEngineCored!blink::EventHandler::handleGestureEvent(class blink::EventWithHitTestResults<blink::PlatformGestureEvent> * targetedEvent = 0x00000041`d90f9ca0)+0x18e [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\core\input\eventhandler.cpp @ 1359]
      00000041`d90f95e0 00000001`848759fb Qt5WebEngineCored!blink::WebViewImpl::handleGestureEvent(class blink::WebGestureEvent * event = 0x00000230`d333c2f4)+0xe83 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\web\webviewimpl.cpp @ 875]
      00000041`d90f9dd0 00000001`847ef4c6 Qt5WebEngineCored!blink::PageWidgetDelegate::handleInputEvent(class blink::PageWidgetEventHandler * handler = 0x000001b2`3ace0020, class blink::WebInputEvent * event = 0x00000230`d333c2f4, class blink::LocalFrame * root = 0x000001eb`c5fa2018)+0x3db [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\web\pagewidgetdelegate.cpp @ 194]
      00000041`d90f9f70 00000001`848a30dc Qt5WebEngineCored!blink::WebViewImpl::handleInputEvent(class blink::WebInputEvent * inputEvent = 0x00000230`d333c2f4)+0x966 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\web\webviewimpl.cpp @ 2212]
      00000041`d90fa2e0 00000001`8438892a Qt5WebEngineCored!blink::WebViewFrameWidget::handleInputEvent(class blink::WebInputEvent * event = 0x00000230`d333c2f4)+0x2c [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\web\webviewframewidget.cpp @ 89]
      00000041`d90fa310 00000001`84246bb9 Qt5WebEngineCored!content::RenderWidgetInputHandler::HandleInputEvent(class blink::WebInputEvent * input_event = 0x00000230`d333c2f4, class ui::LatencyInfo * latency_info = 0x00000041`d90fab48, content::InputEventDispatchType dispatch_type = DISPATCH_TYPE_BLOCKING (0n0))+0x74a [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\content\renderer\input\render_widget_input_handler.cc @ 319]
      00000041`d90fa980 00000001`841bb904 Qt5WebEngineCored!content::RenderWidget::OnHandleInputEvent(class blink::WebInputEvent * input_event = 0x00000230`d333c2f4, class ui::LatencyInfo * latency_info = 0x00000041`d90fab48, content::InputEventDispatchType dispatch_type = DISPATCH_TYPE_BLOCKING (0n0))+0x59 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\content\renderer\render_widget.cc @ 805]
      00000041`d90fa9c0 00000001`841bae2b Qt5WebEngineCored!base::DispatchToMethodImpl<content::RenderViewImpl * __ptr64,void (class content::RenderViewImpl ** obj = 0x00000041`d90faab0, <function> * method = 0x00000041`d90faa30, class std::tuple<blink::WebInputEvent const *,ui::LatencyInfo,enum content::InputEventDispatchType> * args = 0x00000041`d90fab40, struct base::IndexSequence<0,1,2> __formal = struct base::IndexSequence<0,1,2>)+0xa4 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\tuple.h @ 145]
      00000041`d90faa00 00000001`841bb302 Qt5WebEngineCored!base::DispatchToMethod<content::RenderViewImpl * __ptr64,void (class content::RenderViewImpl ** obj = 0x00000041`d90faab0, <function> * method = 0x00000041`d90faa80, class std::tuple<blink::WebInputEvent const *,ui::LatencyInfo,enum content::InputEventDispatchType> * args = 0x00000041`d90fab40)+0x4b [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\tuple.h @ 153]
      00000041`d90faa60 00000001`8423b15f Qt5WebEngineCored!IPC::DispatchToMethod<content::RenderViewImpl,void (class content::RenderViewImpl * obj = 0x00000230`c6232a90, <function> * method = 0x00000041`d90fab10, void * __formal = 0x00000000`00000000, class std::tuple<blink::WebInputEvent const *,ui::LatencyInfo,enum content::InputEventDispatchType> * tuple = 0x00000041`d90fab40)+0x42 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\ipc\ipc_message_templates.h @ 27]
      00000041`d90faab0 00000001`84247577 Qt5WebEngineCored!IPC::MessageT<InputMsg_HandleInputEvent_Meta,std::tuple<blink::WebInputEvent const * __ptr64,ui::LatencyInfo,enum content::InputEventDispatchType>,void>::Dispatch<content::RenderWidget,content::RenderWidget,void,void (class IPC::Message * msg = 0x00000041`d90fd5b0, class content::RenderWidget * obj = 0x00000230`c6232a90, class content::RenderWidget * sender = 0x00000230`c6232a90, void * parameter = 0x00000000`00000000, <function> * func = 0x00000041`d90fb010)+0x13f [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\ipc\ipc_message_templates.h @ 122]
      00000041`d90fae00 00000001`841c9a49 Qt5WebEngineCored!content::RenderWidget::OnMessageReceived(class IPC::Message * message = 0x00000041`d90fd5b0)+0x247 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\content\renderer\render_widget.cc @ 601]
      00000041`d90fbb90 00000001`865af06d Qt5WebEngineCored!content::RenderViewImpl::OnMessageReceived(class IPC::Message * message = 0x00000041`d90fd5b0)+0x1f09 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\content\renderer\render_view_impl.cc @ 1237]
      00000041`d90fcd10 00000001`840eb49d Qt5WebEngineCored!IPC::MessageRouter::RouteMessage(class IPC::Message * msg = 0x00000041`d90fd5b0)+0x4d [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\ipc\message_router.cc @ 57]
      00000041`d90fcd50 00000001`865aefeb Qt5WebEngineCored!content::ChildThreadImpl::ChildThreadMessageRouter::RouteMessage(class IPC::Message * msg = 0x00000041`d90fd5b0)+0x1d [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\content\child\child_thread_impl.cc @ 348]
      00000041`d90fcd90 00000001`840ead78 Qt5WebEngineCored!IPC::MessageRouter::OnMessageReceived(class IPC::Message * msg = 0x00000041`d90fd5b0)+0x4b [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\ipc\message_router.cc @ 49]
      00000041`d90fcdc0 00000001`8426e634 Qt5WebEngineCored!content::ChildThreadImpl::OnMessageReceived(class IPC::Message * msg = 0x00000041`d90fd5b0)+0x7e8 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\content\child\child_thread_impl.cc @ 796]
      00000041`d90fd210 00000001`8426e529 Qt5WebEngineCored!base::internal::FunctorTraits<bool (<function> * method = 0x00000041`d90fd280, class content::RenderThreadImpl ** receiver_ptr = 0x00000041`d90fd318, class IPC::Message * <args_0> = 0x00000041`d90fd5b0)+0x84 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 215]
      00000041`d90fd250 00000001`8426ea13 Qt5WebEngineCored!base::internal::FunctorTraits<base::internal::IgnoreResultHelper<bool (struct base::internal::IgnoreResultHelper<bool (__cdecl content::ChildThreadImpl::*)(IPC::Message const &)> * ignore_result_helper = 0x00000230`c6073030, class content::RenderThreadImpl ** <args_0> = 0x00000041`d90fd318, class IPC::Message * <args_1> = 0x00000041`d90fd5b0)+0x69 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 250]
      00000041`d90fd2b0 00000001`8426f4a5 Qt5WebEngineCored!base::internal::InvokeHelper<0,void>::MakeItSo<base::internal::IgnoreResultHelper<bool (struct base::internal::IgnoreResultHelper<bool (__cdecl content::ChildThreadImpl::*)(IPC::Message const &)> * functor = 0x00000230`c6073030, class content::RenderThreadImpl ** <args_0> = 0x00000041`d90fd318, class IPC::Message * <args_1> = 0x00000041`d90fd5b0)+0x53 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 287]
      00000041`d90fd2f0 00000001`84280882 Qt5WebEngineCored!base::internal::Invoker<base::internal::BindState<base::internal::IgnoreResultHelper<bool (struct base::internal::IgnoreResultHelper<bool (__cdecl content::ChildThreadImpl::*)(IPC::Message const &)> * functor = 0x00000230`c6073030, class std::tuple<base::internal::UnretainedWrapper<content::RenderThreadImpl> > * bound = 0x00000230`c6073040 {...}, struct base::IndexSequence<0> __formal = struct base::IndexSequence<0>, class IPC::Message * <unbound_args_0> = 0x00000041`d90fd5b0)+0x65 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 365]
      00000041`d90fd330 00000001`80e0cd50 Qt5WebEngineCored!base::internal::Invoker<base::internal::BindState<base::internal::IgnoreResultHelper<bool (class base::internal::BindStateBase * base = 0x00000230`c6073010, class IPC::Message * <unbound_args_0> = 0x00000041`d90fd5b0)+0x52 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 343]
      00000041`d90fd380 00000001`84279679 Qt5WebEngineCored!base::internal::RunMixin<base::Callback<void __cdecl(class base::WeakPtr<content::VideoCaptureController> * <args_0> = 0x00000041`d90fd5b0)+0x70 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\callback.h @ 65]
      00000041`d90fd3d0 00000001`8426e5a8 Qt5WebEngineCored!base::CancelableCallback<void __cdecl(class IPC::Message * <args_0> = 0x00000041`d90fd5b0)+0x29 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\cancelable_callback.h @ 111]
      00000041`d90fd400 00000001`80dddf36 Qt5WebEngineCored!base::internal::FunctorTraits<void (<function> * method = 0x00000001`84279650, class base::WeakPtr<base::CancelableCallback<void __cdecl(IPC::Message const &)> > * receiver_ptr = 0x00000230`c6145f88, class IPC::Message * <args_0> = 0x00000041`d90fd5b0)+0x38 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 235]
      00000041`d90fd440 00000001`8685c2e8 Qt5WebEngineCored!base::internal::InvokeHelper<1,void>::MakeItSo<void (<function> ** functor = 0x00000230`c6145f80, class base::WeakPtr<media::VideoFrameReceiver> * weak_ptr = 0x00000230`c6145f88, class std::basic_string<char,std::char_traits<char>,std::allocator<char> > * <args_0> = 0x00000041`d90fd5b0 "Ø")+0x66 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 308]
      00000041`d90fd480 00000001`8686cf62 Qt5WebEngineCored!base::internal::Invoker<base::internal::BindState<void (<function> ** functor = 0x00000230`c6145f80, class std::tuple<base::WeakPtr<media::DecoderStream<1> > > * bound = 0x00000230`c6145f88 {...}, struct base::IndexSequence<0> __formal = struct base::IndexSequence<0>, class scoped_refptr<media::AudioBuffer> * <unbound_args_0> = 0x00000041`d90fd5b0)+0x68 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 365]
      00000041`d90fd4c0 00000001`80e0cd50 Qt5WebEngineCored!base::internal::Invoker<base::internal::BindState<void (class base::internal::BindStateBase * base = 0x00000230`c6145f60, class scoped_refptr<media::AudioBuffer> * <unbound_args_0> = 0x00000041`d90fd5b0)+0x52 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 343]
      00000041`d90fd510 00000001`843d5269 Qt5WebEngineCored!base::internal::RunMixin<base::Callback<void __cdecl(class base::WeakPtr<content::VideoCaptureController> * <args_0> = 0x00000041`d90fd5b0)+0x70 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\callback.h @ 65]
      00000041`d90fd560 00000001`844e30a8 Qt5WebEngineCored!content::InputEventFilter::HandleEventOnMainThread(int routing_id = 0n1, class blink::WebInputEvent * event = 0x00000230`d3a93cb0, class ui::LatencyInfo * latency_info = 0x00000041`d90fd7d8, content::InputEventDispatchType dispatch_type = DISPATCH_TYPE_BLOCKING (0n0))+0x119 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\content\renderer\input\input_event_filter.cc @ 298]
      00000041`d90fd6d0 00000001`844e32a8 Qt5WebEngineCored!content::MainThreadEventQueue::DispatchInFlightEvent(void)+0x518 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\content\renderer\input\main_thread_event_queue.cc @ 175]
      00000041`d90fda80 00000001`80b79826 Qt5WebEngineCored!content::MainThreadEventQueue::DispatchSingleEvent(void)+0x88 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\content\renderer\input\main_thread_event_queue.cc @ 209]
      00000041`d90fdac0 00000001`80c49467 Qt5WebEngineCored!base::internal::FunctorTraits<void (<function> * method = 0x00000001`844e3220, class scoped_refptr<content::BrowserAssociatedInterface<indexed_db::mojom::Factory>::InternalState> * receiver_ptr = 0x00000230`d77b6768)+0x26 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 215]
      00000041`d90fdb00 00000001`80c495cc Qt5WebEngineCored!base::internal::InvokeHelper<0,void>::MakeItSo<void (<function> ** functor = 0x00000230`d77b6760, class scoped_refptr<content::BrowserAssociatedInterface<content::mojom::URLLoaderFactory>::InternalState> * <args_0> = 0x00000230`d77b6768)+0x37 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 287]
      00000041`d90fdb40 00000001`80c4c5a3 Qt5WebEngineCored!base::internal::Invoker<base::internal::BindState<void (<function> ** functor = 0x00000230`d77b6760, class std::tuple<scoped_refptr<content::BrowserAssociatedInterface<content::mojom::URLLoaderFactory>::InternalState> > * bound = 0x00000230`d77b6768 {...}, struct base::IndexSequence<0> __formal = struct base::IndexSequence<0>)+0x4c [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 365]
      00000041`d90fdb80 00000001`819be159 Qt5WebEngineCored!base::internal::Invoker<base::internal::BindState<void (class base::internal::BindStateBase * base = 0x00000230`d77b6740)+0x33 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 343]
      00000041`d90fdbc0 00000001`819ed1b3 Qt5WebEngineCored!base::internal::RunMixin<base::Callback<void __cdecl(void)+0x59 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\callback.h @ 47]
      00000041`d90fdc10 00000001`8474cc7b Qt5WebEngineCored!base::debug::TaskAnnotator::RunTask(char * queue_function = 0x00000001`8aa7dd80 "TaskQueueManager::PostTask", struct base::PendingTask * pending_task = 0x00000041`d90fde80)+0x203 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\debug\task_annotator.cc @ 54]
      00000041`d90fdd40 00000001`8474b11d Qt5WebEngineCored!blink::scheduler::TaskQueueManager::ProcessTaskFromWorkQueue(class blink::scheduler::internal::WorkQueue * work_queue = 0x00000230`c60ae7c0)+0x65b [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\platform\scheduler\base\task_queue_manager.cc @ 361]
      00000041`d90fe0c0 00000001`83f9ced7 Qt5WebEngineCored!blink::scheduler::TaskQueueManager::DoWork(class base::TimeTicks run_time = class base::TimeTicks, bool from_main_thread = false)+0x41d [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\third_party\webkit\source\platform\scheduler\base\task_queue_manager.cc @ 250]
      00000041`d90fe3f0 00000001`83f9dede Qt5WebEngineCored!base::internal::FunctorTraits<void (<function> * method = 0x00000041`d90fe470, class base::WeakPtr<storage::QuotaManager> * receiver_ptr = 0x00000230`c60ab620, class GURL ** <args_0> = 0x00000230`c60ab618, bool * <args_1> = 0x00000230`c60ab610)+0x67 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 215]
      00000041`d90fe430 00000001`8474570a Qt5WebEngineCored!base::internal::InvokeHelper<1,void>::MakeItSo<void (<function> ** functor = 0x00000230`c60ab600, class base::WeakPtr<storage::QuotaManager> * weak_ptr = 0x00000230`c60ab620, class GURL ** <args_0> = 0x00000230`c60ab618, bool * <args_1> = 0x00000230`c60ab610)+0x9e [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 308]
      00000041`d90fe4a0 00000001`8474d503 Qt5WebEngineCored!base::internal::Invoker<base::internal::BindState<void (<function> ** functor = 0x00000230`c60ab600, class std::tuple<base::WeakPtr<blink::scheduler::TaskQueueManager>,base::TimeTicks,bool> * bound = 0x00000230`c60ab610, struct base::IndexSequence<0,1,2> __formal = struct base::IndexSequence<0,1,2>)+0x9a [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 365]
      00000041`d90fe4f0 00000001`819be159 Qt5WebEngineCored!base::internal::Invoker<base::internal::BindState<void (class base::internal::BindStateBase * base = 0x00000230`c60ab5e0)+0x33 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\bind_internal.h @ 343]
      00000041`d90fe530 00000001`819ed1b3 Qt5WebEngineCored!base::internal::RunMixin<base::Callback<void __cdecl(void)+0x59 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\callback.h @ 47]
      00000041`d90fe580 00000001`8190027f Qt5WebEngineCored!base::debug::TaskAnnotator::RunTask(char * queue_function = 0x00000001`885b9478 "MessageLoop::PostTask", struct base::PendingTask * pending_task = 0x00000041`d90feb78)+0x203 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\debug\task_annotator.cc @ 54]
      00000041`d90fe6b0 00000001`818fe0bc Qt5WebEngineCored!base::MessageLoop::RunTask(struct base::PendingTask * pending_task = 0x00000041`d90feb78)+0x3cf [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\message_loop\message_loop.cc @ 414]
      00000041`d90fea50 00000001`818fe6f2 Qt5WebEngineCored!base::MessageLoop::DeferOrRunPendingTask(struct base::PendingTask * pending_task = 0x00000041`d90feb78)+0x3c [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\message_loop\message_loop.cc @ 425]
      00000041`d90fea90 00000001`819f103a Qt5WebEngineCored!base::MessageLoop::DoWork(void)+0x172 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\message_loop\message_loop.cc @ 515]
      00000041`d90febd0 00000001`818ffea7 Qt5WebEngineCored!base::MessagePumpDefault::Run(class base::MessagePump::Delegate * delegate = 0x00000230`c6086980)+0xfa [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\message_loop\message_pump_default.cc @ 35]
      00000041`d90feda0 00000001`8192916d Qt5WebEngineCored!base::MessageLoop::RunHandler(void)+0x247 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\message_loop\message_loop.cc @ 379]
      00000041`d90ff150 00000001`819301a5 Qt5WebEngineCored!base::RunLoop::Run(void)+0x3d [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\run_loop.cc @ 36]
      00000041`d90ff1b0 00000001`819316c6 Qt5WebEngineCored!base::Thread::Run(class base::RunLoop * run_loop = 0x00000041`d90ff508)+0x195 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\threading\thread.cc @ 246]
      00000041`d90ff430 00000001`818c5a11 Qt5WebEngineCored!base::Thread::ThreadMain(void)+0x556 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\threading\thread.cc @ 336]
      00000041`d90ffaa0 00007ffc`caa02774 Qt5WebEngineCored!base::`anonymous namespace'::ThreadFunc(void * params = 0x00000230`c6086d50)+0x131 [e:\dev\qt\qt59_source\qtwebengine\src\3rdparty\chromium\base\threading\platform_thread_win.cc @ 86]
      00000041`d90ffb50 00007ffc`cb900d51 KERNEL32!BaseThreadInitThunk+0x14
      00000041`d90ffb80 00000000`00000000 ntdll!RtlUserThreadStart+0x21
      

        1. crash-log.txt
          11 kB
        2. crash-video.mp4
          2.48 MB
        3. test-page.zip
          651 kB
        4. IMG_20170726_095244.jpg
          IMG_20170726_095244.jpg
          6.71 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kiburtse Kirill Burtsev
            anron zhao jin
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes