Fully setup replaced QMouseDblClickEvent with source and flags

Not fully preserving properties causes event to not be considered
synthesized by system and be forwarded into chromium. Receiving one
single press event and no release event confuses input event_handler
and triggers infinite loop and renderer process crash for pages with
multiple nested iframes.

Fixes: QTBUG-62106
Change-Id: Iabb8bff78fc3475923b4aa3209b720453a5b6ce5
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>